Dev: backface visibility and DOM model issues

--- a/src/sass/source/elements/_root.scss
+++ b/src/sass/source/elements/_root.scss
@@ -9,7 +9,7 @@ plurid-roots {
 }
 
 plurid-root {
-    // position: absolute;
+    position: absolute;
     height: auto;
     width: 100%;
     transform: translateX(300px) translateY(300px) translateZ(0px) rotateX(0deg) rotateY(20deg) rotateZ(0deg) scale(1);
